2000-06-13  Jeff Freedman  <jeff@amy.nerble.net>

	* 2 usecode intrinsics implemented:  halt_scheduled() and
	in_usecode().  These are a bit risky...

2000-06-12  Jeff Freedman  <jeff@amy.nerble.net>

	* Conversations look more like the original U7 now.

2000-06-11  Jeff Freedman  <jeff@amy.nerble.net>

	* exult.cc:  Set screen size in .exult.cfg.
	* Weather eggs:  Clouds.
	* Weather eggs:  Storm.

2000-06-07  Jeff Freedman  <jeff@amy.nerble.net>

	* Rewrote egg handling.
	* VERY simple combat.  (1 hit = death!)

2000-06-08  Coder Infidel  <coder_infidel@hotmail.com>

	* actors.cc: Fixed warning
	* exult.cc, mouse.cc, mouse.h: use red mouse pointer in combat mode
	* gamewin.cc: added config to skip splash screen

2000-06-06  Jeff Freedman  <jeff@amy.nerble.net>

	* gumps.cc: Fixed initial object placement.
	* drag.cc: Handle 'quantity' objects.

2000-06-07  Coder Infidel  <coder_infidel@hotmail.com>

	* actors.cc: remove unused variable
	* actors.h: updated some comments about NPC frames
	* Makefile.win32: added schedule.o
	* objs.h, schedule.h: fixed compile error for Win32

2000-06-05  Jeff Freedman  <jeff@amy.nerble.net>

	* Trying to gain speed by skipping the rendering of objects
	  totally outside the clip area.

2000-06-05  Jeff Freedman  <jeff@patches.simutech.com>

	* Allow numeric keys in conversations (like U9).

2000-06-04  Jeff Freedman  <jeff@amy.nerble.net>

	* objs.cc (Egg_object): Restore mode after Usecode egg.
	* Keep Avatar moving while mouse down.
	* Tile-scrolling starting to work.

2000-06-03  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc: read_map_data() pulls in superchunks.
	* Show correct names for food items, reagants, etc.

2000-06-02  Jeff Freedman  <jeff@amy.nerble.net>

	* Change to lt() fixes a couple rendering goofs.
	* gameclk.cc: Start 1st schedule after 6 minutes max.

2000-06-01  Jeff Freedman  <jeff@patches.simutech.com>

	* Spellbook mostly done.  (Spells need intrinsic 0x41 to work.)