@@ -1,3 +1,7 @@
+2000-06-17  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* Scaling:  Set width=320, height=200, scale=2 in config file.
+
 2000-06-13  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* 2 usecode intrinsics implemented:  halt_scheduled() and
